# banana-slides

./: Dockerfile.allinone  README.md  README_EN.md  pyproject.toml
backend/: Dockerfile  app.py  config.py
backend/controllers/: export_controller.py  openai_oauth_controller.py  page_controller.py  project_controller.py
backend/migrations/versions/: 016_add_narration_text_to_pages.py
backend/models/: __init__.py  page.py
backend/services/: ai_service.py  prompts.py  task_manager.py  tts_video_service.py
backend/services/ai_providers/image/: codex_provider.py
backend/services/ai_providers/text/: codex_provider.py
backend/tests/unit/: test_renovation_filename.py  test_tts_video_service.py
docs/: cli.mdx
docs/zh/: cli.mdx
docs/zh/features/: creation.mdx
frontend/e2e/: description-detail-level.spec.ts  home-document-drop-integration.spec.ts  home-document-drop.spec.ts  image-queued-status.spec.ts  renovation-chinese-filename.spec.ts
frontend/src/api/: endpoints.ts
frontend/src/components/preview/: SlideCard.tsx
frontend/src/components/shared/: ContextualStatusBadge.tsx  ExportTasksPanel.tsx  HelpModal.tsx  MarkdownTextarea.tsx  MaterialGeneratorModal.tsx  Modal.tsx  StatusBadge.tsx
frontend/src/hooks/: useGeneratingState.ts  usePageStatus.ts
frontend/src/pages/: DetailEditor.tsx  Home.tsx  OutlineEditor.tsx  Settings.tsx  SlidePreview.tsx
frontend/src/store/: useExportTasksStore.ts  useProjectStore.ts
frontend/src/tests/components/: MarkdownTextarea.test.tsx  MaterialGeneratorModal.test.tsx
frontend/src/types/: index.ts
